--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>StackLite</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122477728-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122477728-5');
+</script>
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
